[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/test.jpg" type="Texture" id=1]
[ext_resource path="res://Player/Playback.gd" type="Script" id=4]

[sub_resource type="StyleBoxEmpty" id=3]
content_margin_top = 8.0

[sub_resource type="StyleBoxLine" id=2]
color = Color( 0.2, 0.2, 0.2, 1 )
thickness = 4

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.815686, 0.815686, 0.815686, 1 )
corner_radius_top_left = 5
corner_radius_bottom_left = 5

[node name="Player" type="VBoxContainer"]
margin_right = 152.0
margin_bottom = 216.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="."]
margin_right = 152.0
margin_bottom = 150.0
size_flags_vertical = 3

[node name="Art" type="TextureRect" parent="AspectRatioContainer"]
margin_left = 1.0
margin_right = 151.0
margin_bottom = 150.0
rect_min_size = Vector2( 150, 150 )
size_flags_vertical = 3
texture = ExtResource( 1 )
expand = true

[node name="Title" type="Label" parent="."]
margin_top = 154.0
margin_right = 152.0
margin_bottom = 176.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_styles/normal = SubResource( 3 )
text = "Song Title"
align = 1
clip_text = true

[node name="Controls" type="HBoxContainer" parent="."]
margin_top = 180.0
margin_right = 152.0
margin_bottom = 200.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Button" parent="Controls"]
margin_left = 11.0
margin_right = 53.0
margin_bottom = 20.0
text = "Back"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play" type="Button" parent="Controls"]
margin_left = 57.0
margin_right = 95.0
margin_bottom = 20.0
text = "Play"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Next" type="Button" parent="Controls"]
margin_left = 99.0
margin_right = 141.0
margin_bottom = 20.0
text = "Next"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Length" type="HSlider" parent="."]
margin_top = 204.0
margin_right = 152.0
margin_bottom = 220.0
custom_styles/slider = SubResource( 2 )
custom_styles/grabber_area = SubResource( 1 )
rounded = true
__meta__ = {
"_editor_description_": "Shows the progress of the track and allows the user to jump through it"
}

[node name="Options" type="HBoxContainer" parent="."]
margin_top = 224.0
margin_right = 152.0
margin_bottom = 248.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Loop" type="CheckBox" parent="Options"]
margin_right = 59.0
margin_bottom = 24.0
text = "Loop"

[node name="Autoplay" type="CheckBox" parent="Options"]
margin_left = 63.0
margin_right = 147.0
margin_bottom = 24.0
text = "Autoplay"

[node name="Stream" type="AudioStreamPlayer" parent="."]
autoplay = true

[node name="Ticker" type="Timer" parent="."]
__meta__ = {
"_editor_description_": "Updates the scrollbar every second"
}

[connection signal="pressed" from="Controls/Play" to="." method="_on_Play_pressed"]
[connection signal="gui_input" from="Length" to="." method="_on_Length_gui_input"]
[connection signal="toggled" from="Options/Loop" to="." method="_on_Loop_toggled"]
[connection signal="finished" from="Stream" to="." method="_on_Stream_finished"]
[connection signal="timeout" from="Ticker" to="." method="_on_Ticker_timeout"]
